--- a/project/1_打码器/index.html
+++ b/project/1_打码器/index.html
@@ -60,7 +60,7 @@
             height: 60px;
             width: 60px;
             border-radius: 50%;
-            border: 1px solid #FCE4EC;
+            background-color: rgba(255,255,255,.4);
             position: absolute;
             animation: bubble 9s infinite;
         }
